removed flex-wrap from view-grid to solve 1/2 problems on safari

--- a/src/sass/06_components/_components_search.scss
+++ b/src/sass/06_components/_components_search.scss
@@ -2,10 +2,12 @@
 
 .searchInputWrapper {
   position: relative;
+
   flex-grow: 0;
   flex-shrink: 0;
-  margin-bottom: 1rem;
+
   width: 100%;
+  margin-bottom: 1rem;
 
   .property-search {
     position: relative;
@@ -27,15 +29,19 @@
     .form-group {
       label {
         position: absolute;
+
         margin-bottom: 0.25rem;
+
         font-size: $fontSizeBody;
       }
       input {
         height: 3rem;
+
         -webkit-border-radius: 0;
         border-radius: 0;
         -webkit-box-shadow: none;
         box-shadow: none;
+
         font-size: $fontSizeBody;
       }
     }
@@ -65,6 +71,7 @@
       &.results {
         .card {
           flex-direction: row;
+
           padding: 0 $padding;
 
           .cardContent {
@@ -79,9 +86,9 @@
           }
 
           footer {
+            width: auto;
             margin: 0;
             padding: 0;
-            width: auto;
           }
         }
 
@@ -116,6 +123,7 @@
   }
   div {
     color: $red;
+
     font-size: $fontSizeBody;
   }
 
@@ -125,9 +133,4 @@
   svg {
     color: $navy;
   }
-}
-
-//temp -- !! please remove when dev done in react
-form {
-  width: 100%;
 }
